# ai-workshop-agent-skills

./: .gitignore  README.md
.agent/skills/api-test-generator/: SKILL.md
.agent/skills/pr-review/: SKILL.md
.agent/skills/project-context/references/: templates.md
.agent/skills/qa-feature-docs/: SKILL.md
.agent/skills/react-component/: SKILL.md
.agent/skills/react-component/examples/: Example.test.tsx
.agent/skills/test-generator/: SKILL.md
.claude/skills/api-test-generator/: SKILL.md
.claude/skills/api-test-generator/scripts/: validate_tests.py
.claude/skills/code-review/: SKILL.md
.claude/skills/qa-feature-docs/references/: templates.md
.claude/skills/security-scan/: SKILL.md
.cursor/skills/code-review/references/: output-template.md
.cursor/skills/documentation/: SKILL.md
.cursor/skills/module-context/: SKILL.md
.cursor/skills/react-component/examples/: Example.tsx
.github/skills/module-context/references/: templates.md
.github/skills/pr-review/references/: output-template.md
.opencode/skills/commit-format/: SKILL.md
.opencode/skills/pr-description/: SKILL.md
.opencode/skills/project-context/: SKILL.md
Skills-and-Agents/: 01-skills-vs-prompts.md  02-agent-skills-standard.md  03-progressive-disclosure.md  04-five-patterns.md  05-invocation-control.md  06-setup-guide.md  07-agentic-loop.md  08-common-problems-and-cheatsheet.md
examples/taskify-api/: README.md  pyproject.toml
examples/taskify-api/src/taskify_api/: main.py  models.py  store.py
examples/taskify-ui/: package.json
examples/taskify-ui/src/: App.css  App.tsx
(+5 files in other folders)
