[project]
name = "taskify-api"
version = "0.1.0"
description = "Minimal task manager API for AI Skills workshop demo"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.28",
]

[project.scripts]
taskify-api = "taskify_api.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taskify_api"]
